[package]
name = "mc_protocol_derive"
version = "2.0.0"
edition = "2021"
description = "Proc-macro derive crate for mc_protocol — Minecraft Java Edition protocol serialization"
license = "MIT"
repository = "https://github.com/kauri-off/mc_protocol"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
